@@ -49,7 +49,7 @@ public final class HttpServiceBalancerProvider
 {
     private static final Key<?> STATIC_HTTP_SERVICE_BALANCER_FACTORY_KEY = Key.get(StaticHttpServiceBalancerFactory.class);
     private static final Key<?> HTTP_SERVICE_BALANCER_FACTORY_KEY = Key.get(HttpServiceBalancerFactory.class);
-    private static final ImmutableSet<Key<?>> BALANCER_FACTORY_KEYS = ImmutableSet.of(
+    private static final Set<Key<?>> BALANCER_FACTORY_KEYS = Set.of(
             STATIC_HTTP_SERVICE_BALANCER_FACTORY_KEY,
             HTTP_SERVICE_BALANCER_FACTORY_KEY
     );
@@ -94,7 +94,7 @@ public final class HttpServiceBalancerProvider
         configurationFactory.build(HttpServiceBalancerConfig.class, "service-balancer." + type);
 
         if (factoryKeys.size() > 1) {
-            throw new ConfigurationException(ImmutableSet.of(new Message("Multiple HttpServiceBalancer factories bound: " + factoryKeys)));
+            throw new ConfigurationException(Set.of(new Message("Multiple HttpServiceBalancer factories bound: " + factoryKeys)));
         }
 
         if (factoryKeys.contains(STATIC_HTTP_SERVICE_BALANCER_FACTORY_KEY)) {
@@ -107,7 +107,7 @@ public final class HttpServiceBalancerProvider
             }
         }
         else {
-            throw new ConfigurationException(ImmutableSet.of(new Message("Could not find a factory for HttpServiceBalancer")));
+            throw new ConfigurationException(Set.of(new Message("Could not find a factory for HttpServiceBalancer")));
         }
     }
 
