@@ -17,7 +17,6 @@ package com.proofpoint.jaxrs;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.inject.TypeLiteral;
 import com.proofpoint.reporting.Key;
 import net.bytebuddy.ByteBuddy;
@@ -62,6 +61,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import static net.bytebuddy.description.modifier.FieldManifestation.FINAL;
 import static net.bytebuddy.description.modifier.Ownership.STATIC;
@@ -74,7 +74,7 @@ import static net.bytebuddy.matcher.ElementMatchers.takesArguments;
 
 class TimingWrapper
 {
-    private static final ImmutableSet<Class<?>> JAXRS_ANNOTATIONS = ImmutableSet.of(GET.class, PUT.class, POST.class, DELETE.class, HEAD.class);
+    private static final Set<Class<?>> JAXRS_ANNOTATIONS = Set.of(GET.class, PUT.class, POST.class, DELETE.class, HEAD.class);
     private static final Type KEYNAMES_MAP_TYPE = new TypeLiteral<Map<String, List<String>>>() {}.getType();
 
     private TimingWrapper() {}
